prusti-tests/tests/parse/ui/after_expiry_fail.stderr
error: unexpected token
 --> $DIR/after_expiry_fail.rs:8:17
  |
8 | #[after_expiry(a, a)]
  |                 ^

error: reference of after_expiry must be "result"
  --> $DIR/after_expiry_fail.rs:11:16
   |
11 | #[after_expiry(a => a, a)]
   |                ^

error: aborting due to 2 previous errors

